src/main/java/com/example/workout/error/exception/BusinessException.java
package com.example.workout.error.exception;

import com.example.workout.error.ErrorCode;

public class BusinessException extends RuntimeException{
    private ErrorCode errorCode;

    public BusinessException(ErrorCode errorCode) {
        super(errorCode.getMessage());
        this.errorCode = errorCode;
    }
}
